k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: frontend-service
  namespace: imageprocessing
spec:
  selector:
    app: frontend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
